firestore-path-helper/crates/firestore-path-helper-proc-macro/tests/ui/fail_format_unknown_document_id.rs
fn main() {
    firestore_path_helper_proc_macro::firestore_path_helper!(
        "users/{user_id}/repos/{repo_id}",
        user_id = String,
        // Missing repo_id argument
    );
}
